projects/chloria/base/ocean/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion
  labels:
    app: bastion
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: bastion
  template:
    metadata:
      labels:
        app: bastion
    spec:
      serviceAccountName: chloria-backend
      containers:
        - name: bastion
          image: rust:1.84.0-bookworm
          volumeMounts:
            - name: operator-ca-tls
              mountPath: /usr/local/share/ca-certificates/operator.crt
              subPath: ca.crt
          resources:
            limits:
              memory: 1024Mi
              cpu: 500m
          stdin: true
          tty: true
      volumes:
        - name: operator-ca-tls
          secret:
            secretName: operator-ca-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chloria-api
  labels:
    app: chloria-api
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: chloria-api
  template:
    metadata:
      labels:
        app: chloria-api
    spec:
      serviceAccountName: chloria-backend
      containers:
        # Ref: https://github.com/metalwhale/chloria/blob/main/.github/workflows/api.yml
        - name: chloria-api
          image: metalwhaledev/chloria-api:0.1.0
          imagePullPolicy: Always
          command:
            - chloria-api
          volumeMounts:
            - name: operator-ca-tls
              mountPath: /usr/local/share/ca-certificates/operator.crt
              subPath: ca.crt
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["all"]
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsNonRoot: true
      volumes:
        - name: operator-ca-tls
          secret:
            secretName: operator-ca-tls
