projects/chloria/base/ocean/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chloria-api
spec:
  selector:
    app: chloria-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
