projects/chloria/base/ocean/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chloria-api
spec:
  parentRefs:
    - name: global
      namespace: core-global
  hostnames:
    - PLACEHOLDER # Ref: `../../overlays/${environment}/httproute_patch.yaml` file
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: chloria-api
          port: 80
